--- a/apps/importer/index.html
+++ b/apps/importer/index.html
@@ -6,19 +6,47 @@
   <link rel="stylesheet" href="style/style.css">
 
   <script defer src="js/importer.js"></script>
+  <script defer src="js/google/import.js"></script>
 </head>
 <body role="application">
 
-  <section role="region" class="skin-dark">
+  <section id="importer-menu" role="region" class="skin-dark">
     <header>
       <h1>Importer</h1>
     </header>
-  </section>
-  <section role="region" class="skin-dark">
-    <h2 class="bb-docs">Importing contacts from Google</h2>
+    <p>
+      <h2 class="bb-docs">Importing contacts from Google</h2>
+    </p>
     <p class="container">
       <button class="affirmative" id="importGoogle">Import from Google</button>
     </p>
+  </section>
+
+  <section id="google-contacts" role="region" class="skin-dark hide">
+    <header>
+      <h1>Importer</h1>
+    </header>
+    <p id='progress' data-theme="dark" role="status">
+      <progress></progress>
+      <span>Loading contacts from server</span>
+    </p>
+    <div id='import' class='container hide'>
+      <h2 class='bb-docs'></h2>
+      <button onclick='google.contacts.importContacts()'>Import contacts</button>
+    </div>
+
+    <div id='import_progress' class='container hide'>
+      <h2 class='bb-docs'>Importing contacts</h2>
+      <p data-theme="dark" role="status">
+        <span>0%</span>
+        <progress max="100" value="0"></progress>
+      </p>
+      <button onclick='google.ui.showImportedContacts()' class='hide'> Show imported contacts</button>
+    </div>
+
+    <ul id='contactsList' class='hide'>
+      
+    </ul>
   </section>
 
 </body>
