--- a/apps/communications/ftu/index.html
+++ b/apps/communications/ftu/index.html
@@ -319,6 +319,8 @@
 			</button>
 		</nav>
 	</section>
+  <iframe id="fb-curtain" src="/facebook/curtain.html"></iframe>
+  <iframe id="fb-oauth" hidden src="/facebook/fb_oauth.html"></iframe>
   <iframe id="fb-extensions"></iframe>
 </body>
 </html>
