--- a/apps/communications/ftu/index.html
+++ b/apps/communications/ftu/index.html
@@ -5,15 +5,16 @@
 	<meta http-equiv="pragma" content="no-cache">
 
 	<!-- Common style -->
-	<link rel="stylesheet" type="text/css" href="/shared/style/headers.css"/>
-	<link rel="stylesheet" type="text/css" href="/shared/style/switches.css"/>
-	<link rel="stylesheet" type="text/css" href="/shared/style/input_areas.css"/>
-	<link rel="stylesheet" type="text/css" href="/shared/style/buttons.css"/>
+	<link rel="stylesheet" type="text/css" href="/shared/style/headers.css">
+	<link rel="stylesheet" type="text/css" href="/shared/style/switches.css">
+	<link rel="stylesheet" type="text/css" href="/shared/style/input_areas.css">
+	<link rel="stylesheet" type="text/css" href="/shared/style/buttons.css">
 
-	<link rel="stylesheet" type="text/css" href="/ftu/css/style.css"/>
+	<link rel="stylesheet" type="text/css" href="/ftu/css/style.css">
 	<!-- TODO User BB of list when ready -->
-	<link rel="stylesheet" type="text/css" href="/ftu/css/lists.css"/>
-	<link rel="stylesheet" type="text/css" href="/ftu/css/fb_extensions.css"/>
+	<link rel="stylesheet" type="text/css" href="/ftu/css/lists.css">
+	<link rel="stylesheet" type="text/css" href="/contacts/style/fb_extensions.css">
+  <link href="/facebook/style/curtain_frame.css" rel="stylesheet">
 
 	<title>Welcome to Firefox OS</title>
 
@@ -24,10 +25,9 @@
 	<script type="text/javascript" src="/shared/js/l10n_date.js"></script>
 
 	<!-- Code for FTU App -->
-	<script defer type="text/javascript" src="/contacts/js/fb_extensions.js"></script>
+	<script defer type="text/javascript" src="/ftu/js/fb_launcher.js"></script>
 	<script defer type="text/javascript" src="/contacts/js/utilities/config.js"></script>
 	<script defer type="text/javascript" src="/shared/js/async_storage.js"></script>
-	<script defer type="text/javascript" src="/contacts/js/fb/fb_utils.js"></script>
 	<script defer type="text/javascript" src="/ftu/js/wifi.js"></script>
 	<script defer type="text/javascript" src="/ftu/js/facebook.js"></script>
 	<script defer type="text/javascript" src="/ftu/js/navigation.js"></script>
@@ -241,7 +241,7 @@
 				<section class="logo_container">
 					<img src="css/images/firefox64.png">
 					<span class="logo_title">De todos. Para Todos.</span>
-				</section>	
+				</section>
         <p data-l10n-id="mozillaCommunity">
 	        When you use Firefox OS, you become
 	        part of a global community helping to
@@ -253,7 +253,7 @@
         </p>
         <section>
         	<input type="email" data-l10n-id="emailAddress" placeholder="Email address"></input>
-        </section>  
+        </section>
         <p data-l10n-id="learnHow">
          Learn how Mozilla handle your information in our <a>privacy policy</a>.
         </p>
@@ -280,7 +280,7 @@
             <span></span>
 	        </label>
 	        <a data-l10n-id="collaborate">
-	        	I want to help make Firefox OS faster and 
+	        	I want to help make Firefox OS faster and
 	        	easier to use by sharing information about
 	        	my phone's performance. Learn more
 	        </a>
@@ -319,6 +319,7 @@
 			</button>
 		</nav>
 	</section>
+
   <iframe id="fb-curtain" src="/facebook/curtain.html"></iframe>
   <iframe id="fb-oauth" hidden src="/facebook/fb_oauth.html"></iframe>
   <iframe id="fb-extensions"></iframe>
