Fixing bugs for getting number of imported fb friends

--- a/apps/communications/ftu/index.html
+++ b/apps/communications/ftu/index.html
@@ -27,6 +27,7 @@
 	<!-- Code for FTU App -->
 	<script defer type="text/javascript" src="/ftu/js/fb_launcher.js"></script>
 	<script defer type="text/javascript" src="/contacts/js/utilities/config.js"></script>
+  <script defer type="text/javascript" src="/contacts/js/fb/fb_utils.js"></script>
 	<script defer type="text/javascript" src="/shared/js/async_storage.js"></script>
 	<script defer type="text/javascript" src="/ftu/js/wifi.js"></script>
 	<script defer type="text/javascript" src="/ftu/js/facebook.js"></script>
