Launching FTU and preventing hidding it till we finish the FTU

--- a/apps/communications/ftu/index.html
+++ b/apps/communications/ftu/index.html
@@ -322,7 +322,7 @@
 	</section>
 
   <iframe id="fb-curtain" src="/facebook/curtain.html"></iframe>
-  <iframe id="fb-oauth" hidden src="/facebook/fb_oauth.html"></iframe>
+  <iframe id="fb-oauth" hidden style="display:none" src="/facebook/fb_oauth.html"></iframe>
   <iframe id="fb-extensions"></iframe>
 </body>
 </html>
