--- a/apps/communications/ftu/index.html
+++ b/apps/communications/ftu/index.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" type="text/css" href="/ftu/css/style.css">
 	<!-- TODO User BB of list when ready -->
 	<link rel="stylesheet" type="text/css" href="/ftu/css/lists.css">
-	<link rel="stylesheet" type="text/css" href="/contacts/style/fb_extensions.css">
+	<link rel="stylesheet" type="text/css" href="/ftu/css/fb_extensions.css">
   <link href="/facebook/style/curtain_frame.css" rel="stylesheet">
 
 	<title>Welcome to Firefox OS</title>
