Suggestion before rebasing

--- a/apps/communications/ftu/index.html
+++ b/apps/communications/ftu/index.html
@@ -126,7 +126,7 @@
 						<label id="label_wifi_user" for="wifi_user" data-l10n-id="identity">User (optional):</label>
 						<input type="text" id="wifi_user" placeholder="User (optional)"></input>
 						<label for="wifi_password" data-l10n-id="password">Password</label>
-						<input type="text" id="wifi_password" placeholder="Password" value="1234567890"></input>
+						<input type="text" id="wifi_password" placeholder="Password" value=""></input>
 					</form>
 				</section>
 			</section>
