--- a/apps/communications/ftu/index.html
+++ b/apps/communications/ftu/index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="/shared/style/buttons.css">
 
 	<link rel="stylesheet" type="text/css" href="/ftu/css/style.css">
-	<!-- TODO User BB of list when ready -->
+	<!-- TODO Use BB of list when ready -->
 	<link rel="stylesheet" type="text/css" href="/ftu/css/lists.css">
 	<link rel="stylesheet" type="text/css" href="/ftu/css/fb_extensions.css">
   <link href="/facebook/style/curtain_frame.css" rel="stylesheet">
@@ -178,7 +178,7 @@
 								<span class="icon-dialog"></span>
 								Change
 							</button>
-							<p id="date-configuration-label">Today....</p>
+							<p id="date-configuration-label"></p>
 							<input id="date-configuration" class="invisible" type="date"></input>
 						</li>
 						<li>
