--- a/apps/communications/ftu/index.html
+++ b/apps/communications/ftu/index.html
@@ -261,7 +261,7 @@
 			</section>
 			<section role="region" id="welcome_firefox">
 				<section id="firefox_logo_horizontal">
-					<img src="css/images/logo_FXOS_small.png">
+					<img src="css/images/logosmall.png">
 				</section>
 				<p data-l10n-id="welcomeFirefox">
 					Welcome to Firefox OS, the free and
